src/objects/POT_Apt_Loader__c.object
<CustomObject>
    <fields>
        <fullName>Apt_Name__c</fullName>
        <label>Apt Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Out__c</fullName>
        <label>Days Out</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POT_name__c</fullName>
        <label>POT name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>POT Apt Loader</label>
    <nameField>
        <displayFormat>PAL-{0000}</displayFormat>
        <label>POT Apt Loader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POT Apt Loader</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>